--- a/src/styles/scss/reset.scss
+++ b/src/styles/scss/reset.scss
@@ -15,7 +15,6 @@ body {
 
 html {
   font-size: 16px;
-  scroll-behavior: smooth;
 }
 
 a {
